Tweak display of color system preview on mobile devices, fix grade labels

--- a/src/_js/customizer/colors/color-palettes-preview/style.scss
+++ b/src/_js/customizer/colors/color-palettes-preview/style.scss
@@ -15,6 +15,10 @@
 
   pointer-events: none;
 
+  *, *:before, *:after {
+    box-sizing: border-box;
+  }
+
   &:not(.sm-preview--visible) {
 
     .sm-preview__header {
